--- a/src/pages/UserDashboard/Profile.module.css
+++ b/src/pages/UserDashboard/Profile.module.css
@@ -4,16 +4,45 @@
   align-items: center;
   padding: 1.25rem;
   background-color: #fafafa;
-  border: 1px solid #ddd;
+  border: 1px solid #122a50;
   border-radius: 0.5rem;
   max-width: 31.25rem;
   margin: 0 auto;
   box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
-.profileContainer > h2{
-  color:#f35c3c;
-  padding: .5em;
+.title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.editButton {
+  background-color: #f35c3c;
+  color: #ffff;
+  cursor: pointer;
+  margin-left: 10em;
+  padding: 0.5em;
+  border: none;
+  border-radius: 0.5em;
+  font-size: 0.8em;
+  margin-bottom: 1.8em;
+}
+
+.editButton:hover {
+  color: #122a50;
+}
+.title > h2 {
+  font-family: 'Lilita One', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #f35c3c;
+  margin-left: 6em;
+  padding-bottom: 1em;
+  font-size: 1.8em;
 }
 .profileImage {
   width: 9.375rem;
@@ -24,29 +53,42 @@
   border: 0.125rem solid #122a50;
 }
 
-.form{
-  display:flex;
+.form {
+  display: flex;
   flex-direction: column;
 }
 
-.inputContainer{
+.inputContainer {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
-.input{
-  padding: .5em;
-  border-radius: .5em;
-  border-width: .1em;
+
+.svg {
+  width: 1em;
+  height: 1em;
+}
+.input {
+  padding: 0.5em;
+  border-radius: 0.5em;
+  border-width: 0.1em;
 }
 
-.label{
-  color:#122a50;
-  padding:1em;
+.label {
+  color: #122a50;
+  padding: 1em;
   font-size: 1em;
   font-weight: bolder;
 }
 
-.submit{
-  color:#122a50;
+.submit {
+  background-color: #122a50;
+  color: white;
+  height: 3em;
+  border-radius: 0.5em;
+  border: none;
+}
+
+.submit:hover {
+  color: #f35c3c;
 }
