--- a/src/pages/CourseDetails/CourseDetails.module.css
+++ b/src/pages/CourseDetails/CourseDetails.module.css
@@ -36,8 +36,8 @@
 
 .lessonsListUl {
   display: grid;
-  grid-template-columns: 1fr 1fr; /*Two columns*/
-  gap: 1.25rem; /* Space between grid items */
+  grid-template-columns: 1fr 1fr; 
+  gap: 1.25rem;
   list-style-type: none;
   padding: 0;
 }
@@ -93,14 +93,16 @@
 }
 
 .loadingSpinner {
-  border: 4px solid rgba(0, 0, 0, 0.1);
-  border-top: 4px solid #007bff;
+  border: 0.25rem solid rgba(0, 0, 0, 0.1); 
+  border-top: 0.25rem solid #007bff; 
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
+  width: 2.5rem; 
+  height: 2.5rem; 
   animation: spin 1s linear infinite;
   margin: 0 auto;
 }
+
+
 .backButton {
   background-color: #042d5a;
   color: white;
@@ -180,7 +182,7 @@
   }
 
   .lessonsListUl {
-    grid-template-columns: 1fr; /* One column on smaller screens */
+    grid-template-columns: 1fr; 
   }
 }
 
