--- a/src/components/QuizForm/QuizForm.module.css
+++ b/src/components/QuizForm/QuizForm.module.css
@@ -4,22 +4,32 @@
 
 .quizForm {
     display: flex;
-    flex-grow: 1;
     flex-direction: column;
-    align-items: center;
     margin: 1rem;
 }
 
-.quizTitleInput {
-    border: #0f2240 solid 0.1rem;
-    border-radius: 0.625rem;
-    width: 20rem;
-    height: 2.5rem;
-    margin: 0.5rem 0;
-    padding: 1rem;
+.quizSection {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    margin: 1rem 0 0.5rem 1rem;
     label {
         margin: 0 0.5rem;
     }
+}
+
+.quizFormInput {
+    border: #0f2240 solid 0.1rem;
+    border-radius: 0.625rem;
+    width: 40rem;
+    height: 2.5rem;
+    margin: 0.5rem 0;
+    padding: 1rem;
+}
+
+.titleLabel {
+    font-weight: bold;
+    font-size: 1.1rem;
 }
 
 .addQuestionButton {
@@ -29,23 +39,31 @@
     border-radius: 0.625rem;
     width: 8rem;
     height: 2.5rem;
-    margin-bottom: 1rem;
+    margin: 1rem;
     cursor: pointer;
 }
 
 .questionsContainer {
     display: flex;
     flex-direction: column;
+    padding: 1rem 0;
+    border-bottom: lightgrey solid 0.1rem;
 }
 
-.quizSection {
+.quizQuestionSection {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin: 1rem;
+    align-items: start;
+    padding: 1rem;
+    border-bottom: lightgrey solid 0.1rem;
     label {
         margin: 0 0.5rem;
     }
+}
+
+.questionAnswerLabel {
+    font-weight: bold;
+    font-size: 1.1rem;
 }
 
 .questionInput {
@@ -73,7 +91,7 @@
     border-radius: 0.625rem;
     width: 8rem;
     height: 2.5rem;
-    margin-bottom: 1rem;
+    margin: 1rem;
     cursor: pointer;
 }
 
