--- a/src/pages/UserDashboard/Courses.module.css
+++ b/src/pages/UserDashboard/Courses.module.css
@@ -4,8 +4,10 @@
   justify-content: left;
   gap: 1.25rem;
   padding: 1.25rem;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background-color: #eef2f3;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .enrolledmsgforDiv {
@@ -23,8 +25,11 @@
   margin: 0;
   text-align: left;
   padding: 0.5rem 1rem;
-  font-size: 1.7rem;
+  font-size: 1.9rem;
   color: #080000;
+  font-family: 'Lilita One', sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .form > h2 {
@@ -130,6 +135,9 @@
   display: flex;
   justify-content: center;
   margin: 1.25rem 0;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .pageButton {
@@ -207,6 +215,9 @@
   align-items: center;
   padding: 1rem;
   gap: 1rem;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .dropdownContainer {
